--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -10,7 +10,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@bundlr-network/client": "^0.7.14",
     "@rainbow-me/rainbowkit": "^0.3.2",
+    "arweave-js": "^1.0.0",
     "ethers": "^5.6.9",
     "next": "12.1.6",
     "react": "^18.2.0",
