--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@bundlr-network/client": "^0.7.14",
     "@rainbow-me/rainbowkit": "^0.3.2",
+    "arweave": "^1.11.4",
     "arweave-js": "^1.0.0",
     "ethers": "^5.6.9",
     "next": "12.1.6",
