--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -18,6 +18,7 @@
     "next": "12.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "testweave-sdk": "^0.2.2",
     "wagmi": "^0.4.12"
   },
   "devDependencies": {
